FIX: Change resizer 'right' CSS value to not make it overlap with Sidebar component

--- a/src/views/Layout/WebPlayer/style.scss
+++ b/src/views/Layout/WebPlayer/style.scss
@@ -37,7 +37,7 @@
 
     .resizer {
       width: var(--sidebar-resizer-width);
-      @apply absolute right-0 top-0 h-full cursor-col-resize;
+      @apply absolute -right-[5px] top-0 h-full cursor-col-resize;
     }
 
     .resizer:hover {
